--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.8",
+    "@apollo/experimental-nextjs-app-support": "^0.11.2",
     "framer-motion": "^11.2.12",
+    "graphql": "^16.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
