--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "@apollo/client": "^3.10.8",
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
-    "framer-motion": "^11.2.12",
+    "@nextui-org/button": "^2.0.34",
+    "@nextui-org/input": "^2.2.2",
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/system": "^2.2.2",
+    "@nextui-org/theme": "^2.2.6",
+    "framer-motion": "^11.2.13",
     "graphql": "^16.9.0",
     "next": "14.2.3",
     "react": "^18",
