--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "dev-generate": "graphql-codegen  --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.10.8",
@@ -17,12 +18,14 @@
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
+    "@parcel/watcher": "^2.4.1",
     "framer-motion": "^11.2.13",
     "graphql": "^16.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.4.1",
     "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
