--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.8",
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
+    "@nextui-org/autocomplete": "^2.1.5",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/input": "^2.2.2",
     "@nextui-org/react": "^2.4.2",
