--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
-    "tailwind-merge": "^2.5.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -44,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
