--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hot-toast": "^2.4.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7"
