--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@apollo/client": "^3.10.8",
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
-    "@hookform/resolvers": "^3.9.1",
     "@nextui-org/autocomplete": "^2.1.5",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/input": "^2.2.2",
@@ -23,10 +22,8 @@
     "@parcel/watcher": "^2.4.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
-    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.2",
     "@types/tailwindcss": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -41,12 +38,10 @@
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
-    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
